<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">B-SYNC</string>
    <string name="language">eu</string>
    <string name="no_network">No network!</string>
    <string name="bluetooth_conn">Bluetooth Connect</string>
    <string name="time_light">Timing Lights</string>
    <string name="sleep_assistant">Sleep Assistant</string>
    <string name="version_update">Check for Updates</string>
    <string name="music_play">Music play</string>
    <string name="color_lamp">Color Lamp</string>
    <string name="shake">Shake</string>
    <string name="music">Music</string>
    <string name="shake_setting">Settings</string>
    <string name="my_music">My Music</string>
    <string name="tf_card_music">TF Music</string>
    <string name="cloud_music">Cloud Music</string>
    <string name="edit">Edit</string>
    <string name="file_not_exist_or_damaged">The file is damaged or doesn\'t exist!</string>
    <string name="network_exception">Network Anomaly!</string>
    <string name="media_error_unsupport">The file format is not supported!</string>
    <string name="media_error_timeout">Read data timeout!</string>
    <string name="order">Order</string>
    <string name="shuffle">Shuffle</string>
    <string name="single_reapet">Repeat</string>
    <string name="playlist">Playlist</string>
    <string name="hint_search_song">Please input the keywords</string>
    <string name="text_loading">loading……</string>
    <string name="hint_loading_failed">Failed to load,please check the network！</string>
    <string name="search_no_result">No result！</string>
    <string name="album_result">Album</string>
    <string name="voice_result">Voice</string>
    <string name="shake_default">Default</string>
    <string name="other_options">Other</string>
    <string name="random_color">Random color</string>
    <string name="toggle_light">Close/Open Light</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next_song">Next song</string>
    <string name="loading_music">Loading……</string>
    <string name="tf_card_has_plugin">TF card plugin！</string>
    <string name="tf_card_has_plugout">TF card plugout！</string>
    <string name="keywords_cannot_be_null">The content can not be null!</string>
    <string name="light_normal">Normal</string>
    <string name="light_rainbow">Rainbow</string>
    <string name="light_pulse">Pulse</string>
    <string name="light_flashing">Flashing</string>
    <string name="light_candle">Candle</string>
    <string name="connected">Connected</string> <!-- 连接 -->
    <string name="not_connect">Disconnected</string> <!-- 未连接 -->
    <string name="connect">Connect</string> <!-- 连接 -->
    <string name="delay">Later</string>
    <string name="bluetooth_not_available">The Bluetooth is not be reach!</string>
    <string name="ok">OK</string>
    <string name="cancl">Cancel</string>
    <string name="cancl_pair">Cancel Paired</string>
    <string name="cancl_pair2">Delete device</string>
    <string name="restting_name">Rename</string>
    <string name="remove_device">Are you sure you want to remove this device?</string>
    <string name="name_not_null">The name cann\'t be null</string>
    <string name="select_time">Please choose the sleep time</string>
    <string name="confirmation">OK</string>
    <string name="confirmation_cancel">Cancel</string>
    <string name="check_new_version">Checking for new version……</string>
    <string name="no_newversion">No new version!</string>
    <string name="light_setting">Settings</string>
    <string name="repeate">Repeat</string>
    <string name="light">Light</string>
    <string name="delete">Delete</string>
    <string name="days">Mo  Tu  Ww  Th  Fr  Sa  Su</string>
    <string name="silent">Silent</string>
    <string name="custom_sound">Alarm sound</string>
    <string name="select_alarm_sound">Select the alarm sound</string>
    <string name="ringtone">Ringtone</string>
    <string name="song">Song List</string>
    <string name="alarm">Time openning!</string>
    <string name="dismiss">Dismiss</string>
    <string name="time_up_">Time is up!</string>
    <string name="current_setting">Current setting:</string>
    <string name="loading_tf_music">Loading TF card music&#8230;%1$d%%</string>
    <string name="loading_tf_music_success">Load successed!\n%1$d musics in total, loaded %2$d musics!</string>
    <string name="clear">Got it</string>
    <string name="enter_app">Enter&gt;&gt;</string>
    <string name="press_again_to_exist">Press again to exist!</string>
    <string name="audio_connectioning">Audio connectioning</string>
    <string name="audio_connectionend">Audio connectioned</string>
    <string name="data_connectioning">Data connectioning</string>
    <string name="data_connectionend">Data connectioned</string>
    <string name="connectionend">Connection</string>
    <string name="connect_toast">The related functions of application need to connect with the Bluetooth\n Confirm whether the Bluetooth is connected.</string>
    <string name="discon_connect">Do you want to disconnect？</string>
    <string name="bluetooth_discon_hint">The operation will disconnect with the remote device.</string>
    <string name="sleep_countdown">the countdown is going on&#8230;</string>
    <string name="bluetooth_disconnect">Bluetooth disconnected</string>
    
    <string name="buffering">Buffering&#8230;</string>
    <string name="switch_mode">Switched to %1$s</string>
    <string name="exception_exit">sorry, the program is abnormal, will exit.</string>
    <string name="about">About</string>
    <string name="reach_max_alarm_reminder">10 alarms at most, Can\'t add more!</string>
    <string name="reach_max_device_alarm_reminder">4 alarms at most, Can\'t add more!</string>
    <string name="conn_ble">Please connect to Bluetooth</string>
    <string name="music_rhythm">Music rhythm</string>
    <string name="no_play_content">No play content!</string>
    <string name="choose_song">No Audio!</string>
    <string name="timing_lights_toast">No Timing Lights</string>
    <string name="select_sleep_time">Please choose your sleep time</string>
    <string name="alarm_clock_title">Alarm clock</string>
    <string name="alarmclock">The alarm clock</string>
    <string name="alarmclock_snooze">Delayed</string>
    <string name="alarmclock_turnoff">Close</string>
    <string name="select_alarm_device_sound">Device alarm sound</string>
    
</resources>