<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.chipsguide.app.colorbluetoothlamp.v2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    android:orientation="vertical" >

    <com.chipsguide.app.colorbluetoothlamp.v2.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftImg="@drawable/selector_btn_back"
        app:rightImg="@drawable/selector_btn_player"
        app:text="@string/shake_setting" >
    </com.chipsguide.app.colorbluetoothlamp.v2.view.TitleView>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/shake_default"
            android:textColor="@color/color_dark_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_dark_gray" />

        <RadioButton
            android:id="@+id/rb_random_color"
            style="@style/shake_setting_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:drawableLeft="@drawable/selector_rb_random_color"
            android:text="@string/random_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_dark_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/other_options"
            android:textColor="@color/color_dark_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_dark_gray" />

        <RadioButton
            android:id="@+id/rb_light_toggle"
            style="@style/shake_setting_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/selector_rb_toggle_light"
            android:text="@string/toggle_light" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_dark_gray" />

        <RadioButton
            android:id="@+id/rb_player_toggle"
            style="@style/shake_setting_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/selector_rb_play_pause"
            android:text="@string/play_pause" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_dark_gray" />

        <RadioButton
            android:id="@+id/rb_next_song"
            style="@style/shake_setting_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/selector_rb_next_song"
            android:text="@string/next_song" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_dark_gray" />
    </RadioGroup>

</LinearLayout>