<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alpha_60_black">

    <TextView 
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16dp"
        android:text="@string/alarmclock"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/textview_title"
        android:background="@color/color_blue"/>
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/textview_title"
       android:layout_marginTop="5dp"
       android:orientation="horizontal">
       <Button 
           android:id="@+id/button_ok"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/ok"/>
       <Button 
           android:id="@+id/button_delay"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/delay"/>
   </LinearLayout>

</RelativeLayout>