<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >
    
    <com.chipsguide.app.colorbluetoothlamp.v2.brunton.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftImg="@drawable/selector_btn_back"
        app:rightImg="@drawable/selector_btn_player"
        app:text="@string/edit" >
    </com.chipsguide.app.colorbluetoothlamp.v2.brunton.view.TitleView>

    <TextView
        android:id="@+id/textview_rename"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dip"
        android:text="@string/restting_name"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="#30000000" />

    <TextView
        android:id="@+id/textview_deletedevice"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/cancl_pair2"
        android:textColor="@color/color_red"
        android:textSize="20sp"
        android:background="#30000000"  />

</LinearLayout>