<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/corners_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/connect_toast"
        android:textSize="14dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/color_dialog_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textview_connect_toast_delay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delay"
            android:textSize="16dp" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/color_dialog_line" />

        <TextView
            android:id="@+id/textview_connect_toast"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/connect"
            android:textColor="@color/color_blue"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>