<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/remove_device"
        android:textSize="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/color_dialog_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/remove_textview_back"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancl"
            android:textColor="@color/color_blue"
            android:textSize="20dp" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/color_dialog_line" />

        <TextView
            android:id="@+id/remove_textview_commit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/color_blue"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>