<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
     >
     
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider_line"
        />

    <RelativeLayout
        android:id="@+id/repeate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <com.chipsguide.app.colorbluetoothlamp.v2.view.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeate"
            android:textSize="@dimen/text_size_medium" />
        
        <com.chipsguide.app.colorbluetoothlamp.v2.view.MyTextView
            android:id="@+id/tv_repeate_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textSize="@dimen/text_size_medium" 
            android:layout_alignParentRight="true"
            />
        
    </RelativeLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider_line"
        />

    <LinearLayout
        android:id="@+id/light_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <com.chipsguide.app.colorbluetoothlamp.v2.view.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider_line"
        />

    <LinearLayout
        android:id="@+id/music_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <com.chipsguide.app.colorbluetoothlamp.v2.view.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider_line"
        />

</LinearLayout>