<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/corners_bg">
   
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/restting_name"
        android:textSize="20dp"/>
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="50dp">
        <EditText 
		    android:id="@+id/edittext_tag"
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:maxLength="8"/>
        <ImageView 
            android:id="@+id/iamgeview_tag_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:layout_margin="10dp"
            android:src="@drawable/btn_mark_delete"/>
    </RelativeLayout>
    <View 
       android:layout_width="match_parent"
       android:layout_height="1.5dp"
       android:background="@color/color_dialog_line"/>
	 <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
	        <TextView
	            android:id="@+id/mytextview_back"
	            android:layout_width="match_parent"
	            android:layout_height="40dp"
	            android:layout_weight="1"
	            android:textColor="@color/light_blue"
	            android:textSize="20dp"
	            android:gravity="center"
	            android:text="@string/cancl"/>
	        <View 
	            android:layout_width="1.5dp"
	            android:layout_height="match_parent"
	            android:background="@color/color_dialog_line"/>
	        <TextView
	            android:id="@+id/mytextview_commit"
	            android:layout_width="match_parent"
	            android:layout_height="40dp"
	            android:layout_weight="1"
	            android:textColor="@color/light_blue"
	            android:textSize="20dp"
	            android:gravity="center"
	            android:text="@string/ok"/>
    </LinearLayout>
</LinearLayout>
