<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corners_bg"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textview_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/discon_connect"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/color_black" />
    
    <TextView
        android:id="@+id/textv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="left"
        android:textSize="20sp" />
	<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/color_black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_ok"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <View 
            android:layout_width="2dp"
            android:layout_height="40dp"
            android:background="@color/color_black"/>
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/cancl"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout> 